<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settings"
            type="com.example.bottomlinelocations.data.Settings" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottomline_green"
        tools:context=".ui.home.HomeFragment">

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/log_out"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/select_a_language"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonLanguage1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/language_dutch"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLanguage"
            app:layout_constraintVertical_bias="0.071" />

        <Button
            android:id="@+id/buttonLanguage2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/language_english"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLanguage"
            app:layout_constraintVertical_bias="0.071" />

        <Button
            android:id="@+id/buttonGetLastLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_last_language"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLanguage1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>